chore(build): Add --enable-native-access=ALL-UNNAMED to SQLite concerning jvmArgs