@@ -65,3 +65,7 @@ sqldelight {
         }
     }
 }
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
